--- a/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
+++ b/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
@@ -590,17 +590,17 @@
 		// Make sure bean class is actually resolved at this point.
 		//确保bean的类再当前已经解析，这里会解析指定BeanDefinition的类
 		Class<?> beanClass = resolveBeanClass(mbd, beanName);
-		//如果bean不是public的，并且BeanDefinition不允许非public权限，那么久抛BeanCreationException异常
+		//如果bean不是public的，并且BeanDefinition不允许非public类的访问权限，那么久抛BeanCreationException异常
 		if (beanClass != null && !Modifier.isPublic(beanClass.getModifiers()) && !mbd.isNonPublicAccessAllowed()) {
 			throw new BeanCreationException(mbd.getResourceDescription(), beanName,
 					"Bean class isn't public, and non-public access not allowed: " + beanClass.getName());
 		}
-
+		//BeanDefinition是否有属性instanceSupplier，如果有就从InstanceSupplier获取bean，这种方式比通过反射构造bean效率高一些，如果获取不到bean，则返回nullBean
 		Supplier<?> instanceSupplier = mbd.getInstanceSupplier();
 		if (instanceSupplier != null) {
 			return obtainFromSupplier(instanceSupplier, beanName);
 		}
-
+		//如果存在工厂方法，那么久使用工厂方法进行初始化
 		if (mbd.getFactoryMethodName() != null) {
 			return instantiateUsingFactoryMethod(beanName, mbd, args);
 		}
@@ -608,6 +608,7 @@
 		// Shortcut when re-creating the same bean...
 		boolean resolved = false;
 		boolean autowireNecessary = false;
+		//判断是否对bean进行过解析，解析过的resolvedConstructorOrFactoryMethod不为空，如果解析过后边就直接从缓存中获取解析出来的构造函数，否则需要进行解析，解析比较耗费性能
 		if (args == null) {
 			synchronized (mbd.constructorArgumentLock) {
 				if (mbd.resolvedConstructorOrFactoryMethod != null) {
@@ -618,14 +619,17 @@
 		}
 		if (resolved) {
 			if (autowireNecessary) {
+				//如果可以注入，那么使用构造函数进行自动注入
 				return autowireConstructor(beanName, mbd, null, null);
 			}
 			else {
+				//否则使用默认构造函数
 				return instantiateBean(beanName, mbd);
 			}
 		}
 
 		// Candidate constructors for autowiring?
+		//执行所有SmartInstantiationAwareBeanPostProcessor的determineCandidateConstructors方法，获取构造函数，如果获取到那么就按照构造函数进行自动注入
 		Constructor<?>[] ctors = determineConstructorsFromBeanPostProcessors(beanClass, beanName);
 		if (ctors != null || mbd.getResolvedAutowireMode() == AUTOWIRE_CONSTRUCTOR ||
 				mbd.hasConstructorArgumentValues() || !ObjectUtils.isEmpty(args)) {
@@ -633,12 +637,465 @@
 		}
 
 		// Preferred constructors for default construction?
+		//通过反射获取类的构造函数，如果获取到那么就按照构造函数进行自动注入
 		ctors = mbd.getPreferredConstructors();
 		if (ctors != null) {
 			return autowireConstructor(beanName, mbd, ctors, null);
 		}
 
 		// No special handling: simply use no-arg constructor.
+		//使用默认构造函数
 		return instantiateBean(beanName, mbd);
 	}
+```
+这里主要方法有三个，一个是```instantiateUsingFactoryMethod```使用factoryMethod进行初始化，一个是```autowireConstructor```使用构造函数进行自动注入，和```instantiateBean```使用默认构造函数，依次对着三个方法进行分析：
+##### instantiateUsingFactoryMethod
+```
+	protected BeanWrapper instantiateUsingFactoryMethod(
+			String beanName, RootBeanDefinition mbd, @Nullable Object[] explicitArgs) {
+
+		return new ConstructorResolver(this).instantiateUsingFactoryMethod(beanName, mbd, explicitArgs);
+	}
+	//ConstructorResolver.instantiateUsingFactoryMethod
+	public BeanWrapper instantiateUsingFactoryMethod(
+			String beanName, RootBeanDefinition mbd, @Nullable Object[] explicitArgs) {
+		//初始化BeanWrapperImpl
+		BeanWrapperImpl bw = new BeanWrapperImpl();
+		this.beanFactory.initBeanWrapper(bw);
+
+		Object factoryBean;
+		Class<?> factoryClass;
+		boolean isStatic;
+
+		String factoryBeanName = mbd.getFactoryBeanName();
+		//为factoryBean、factoryClass、isStatic赋值，分为两个分支
+		//如果factoryBeanName不为空，那么根据factoryBeanName获取对应的factoryBean，factoryClass为factoryBean对应的类，isSattic为false
+		//如果factoryBeanName为空，那么factoryBean也为空，factoryClass是BeanDefinition对应的beanClass，isStatic为true
+		if (factoryBeanName != null) {
+			if (factoryBeanName.equals(beanName)) {
+				throw new BeanDefinitionStoreException(mbd.getResourceDescription(), beanName,
+						"factory-bean reference points back to the same bean definition");
+			}
+			factoryBean = this.beanFactory.getBean(factoryBeanName);
+			if (mbd.isSingleton() && this.beanFactory.containsSingleton(beanName)) {
+				throw new ImplicitlyAppearedSingletonException();
+			}
+			this.beanFactory.registerDependentBean(factoryBeanName, beanName);
+			factoryClass = factoryBean.getClass();
+			isStatic = false;
+		}
+		else {
+			// It's a static factory method on the bean class.
+			if (!mbd.hasBeanClass()) {
+				throw new BeanDefinitionStoreException(mbd.getResourceDescription(), beanName,
+						"bean definition declares neither a bean class nor a factory-bean reference");
+			}
+			factoryBean = null;
+			factoryClass = mbd.getBeanClass();
+			isStatic = true;
+		}
+
+		Method factoryMethodToUse = null;
+		ArgumentsHolder argsHolderToUse = null;
+		Object[] argsToUse = null;
+		//如果explicitArgs有值则使用explicitArgs作为参数，从doGetBean方法的调用入参看explicitArgs为null
+		if (explicitArgs != null) {
+			argsToUse = explicitArgs;
+		}
+		//如果explicitArgs为null，那么就使用BeanDefinition的解析结果为参数赋值
+		else {
+			Object[] argsToResolve = null;
+			synchronized (mbd.constructorArgumentLock) {
+				factoryMethodToUse = (Method) mbd.resolvedConstructorOrFactoryMethod;
+				if (factoryMethodToUse != null && mbd.constructorArgumentsResolved) {
+					// Found a cached factory method...
+					argsToUse = mbd.resolvedConstructorArguments;
+					if (argsToUse == null) {
+						argsToResolve = mbd.preparedConstructorArguments;
+					}
+				}
+			}
+			//如果缓存中存在，那么使用缓存中的并将参数进行转换，如("1")会转换为(1)
+			if (argsToResolve != null) {
+				argsToUse = resolvePreparedArguments(beanName, mbd, bw, factoryMethodToUse, argsToResolve);
+			}
+		}
+
+		if (factoryMethodToUse == null || argsToUse == null) {
+			// Need to determine the factory method...
+			// Try all methods with this name to see if they match the given arguments.
+			//需要确定factoryMethod，尝试所有指定名称的方法已匹配入参
+			//确定类的原始类型，如果是cglib的代理类，那么会获取类的父类
+			factoryClass = ClassUtils.getUserClass(factoryClass);
+
+			List<Method> candidates = null;
+			//factoryMethod唯一的话就使用BeanDefinition解析的factoryMethodToIntrospect并使用它构造为只有一个对象的集合
+			if (mbd.isFactoryMethodUnique) {
+				if (factoryMethodToUse == null) {
+					factoryMethodToUse = mbd.getResolvedFactoryMethod();
+				}
+				if (factoryMethodToUse != null) {
+					candidates = Collections.singletonList(factoryMethodToUse);
+				}
+			}
+			if (candidates == null) {
+				//如果factoryMethod不唯一或者BeanDefinition的factoryMethodToIntrospect为null，那么就获取类的方法,分为两种情况
+				//1、允许非public类的访问权限，获取指定类的父类和接口的方法，使用Class.getDeclaredMethods
+				//2、不允许非public类的访问权限，获取类的所有公共方法,使用Class.getMethods
+				candidates = new ArrayList<>();
+				Method[] rawCandidates = getCandidateMethods(factoryClass, mbd);
+				for (Method candidate : rawCandidates) {
+					//判断方法是否statis的，如果factoryBeanName不为空，则isStatic=false，否则为true，另外一个条件是判断方法名是否等于factoryMethodName，也就是找到所有方法和factorMethodName相同的方法
+					if (Modifier.isStatic(candidate.getModifiers()) == isStatic && mbd.isFactoryMethod(candidate)) {
+						candidates.add(candidate);
+					}
+				}
+			}
+			//如果匹配的方法只有一个，且explicitArgs为空，且构造函数不需要入参，那么就设置该方法为解析结果并设置BeanDefinition为已解析，参数为空
+			if (candidates.size() == 1 && explicitArgs == null && !mbd.hasConstructorArgumentValues()) {
+				Method uniqueCandidate = candidates.get(0);
+				if (uniqueCandidate.getParameterCount() == 0) {
+					mbd.factoryMethodToIntrospect = uniqueCandidate;
+					synchronized (mbd.constructorArgumentLock) {
+						mbd.resolvedConstructorOrFactoryMethod = uniqueCandidate;
+						mbd.constructorArgumentsResolved = true;
+						mbd.resolvedConstructorArguments = EMPTY_ARGS;
+					}
+					//执行factoryBean的该方法生成实例
+					bw.setBeanInstance(instantiate(beanName, mbd, factoryBean, uniqueCandidate, EMPTY_ARGS));
+					return bw;
+				}
+			}
+			//如果匹配的方法有多个，那么首先先对方法进行排序，排序规则为首先比较两个方法的访问权限，是否为public，如果都为public，那么比较方法的参数个数
+			if (candidates.size() > 1) {  // explicitly skip immutable singletonList
+				candidates.sort(AutowireUtils.EXECUTABLE_COMPARATOR);
+			}
+
+			ConstructorArgumentValues resolvedValues = null;
+			boolean autowiring = (mbd.getResolvedAutowireMode() == AutowireCapableBeanFactory.AUTOWIRE_CONSTRUCTOR);
+			int minTypeDiffWeight = Integer.MAX_VALUE;
+			Set<Method> ambiguousFactoryMethods = null;
+
+			int minNrOfArgs;
+			if (explicitArgs != null) {
+				minNrOfArgs = explicitArgs.length;
+			}
+			else {
+				// We don't have arguments passed in programmatically, so we need to resolve the
+				// arguments specified in the constructor arguments held in the bean definition.
+				if (mbd.hasConstructorArgumentValues()) {
+					ConstructorArgumentValues cargs = mbd.getConstructorArgumentValues();
+					resolvedValues = new ConstructorArgumentValues();
+					minNrOfArgs = resolveConstructorArguments(beanName, mbd, bw, cargs, resolvedValues);
+				}
+				else {
+					minNrOfArgs = 0;
+				}
+			}
+
+			Deque<UnsatisfiedDependencyException> causes = null;
+
+			for (Method candidate : candidates) {
+				int parameterCount = candidate.getParameterCount();
+
+				if (parameterCount >= minNrOfArgs) {
+					ArgumentsHolder argsHolder;
+
+					Class<?>[] paramTypes = candidate.getParameterTypes();
+					if (explicitArgs != null) {
+						// Explicit arguments given -> arguments length must match exactly.
+						if (paramTypes.length != explicitArgs.length) {
+							continue;
+						}
+						argsHolder = new ArgumentsHolder(explicitArgs);
+					}
+					else {
+						// Resolved constructor arguments: type conversion and/or autowiring necessary.
+						try {
+							String[] paramNames = null;
+							ParameterNameDiscoverer pnd = this.beanFactory.getParameterNameDiscoverer();
+							if (pnd != null) {
+								paramNames = pnd.getParameterNames(candidate);
+							}
+							argsHolder = createArgumentArray(beanName, mbd, resolvedValues, bw,
+									paramTypes, paramNames, candidate, autowiring, candidates.size() == 1);
+						}
+						catch (UnsatisfiedDependencyException ex) {
+							if (logger.isTraceEnabled()) {
+								logger.trace("Ignoring factory method [" + candidate + "] of bean '" + beanName + "': " + ex);
+							}
+							// Swallow and try next overloaded factory method.
+							if (causes == null) {
+								causes = new ArrayDeque<>(1);
+							}
+							causes.add(ex);
+							continue;
+						}
+					}
+
+					int typeDiffWeight = (mbd.isLenientConstructorResolution() ?
+							argsHolder.getTypeDifferenceWeight(paramTypes) : argsHolder.getAssignabilityWeight(paramTypes));
+					// Choose this factory method if it represents the closest match.
+					if (typeDiffWeight < minTypeDiffWeight) {
+						factoryMethodToUse = candidate;
+						argsHolderToUse = argsHolder;
+						argsToUse = argsHolder.arguments;
+						minTypeDiffWeight = typeDiffWeight;
+						ambiguousFactoryMethods = null;
+					}
+					// Find out about ambiguity: In case of the same type difference weight
+					// for methods with the same number of parameters, collect such candidates
+					// and eventually raise an ambiguity exception.
+					// However, only perform that check in non-lenient constructor resolution mode,
+					// and explicitly ignore overridden methods (with the same parameter signature).
+					else if (factoryMethodToUse != null && typeDiffWeight == minTypeDiffWeight &&
+							!mbd.isLenientConstructorResolution() &&
+							paramTypes.length == factoryMethodToUse.getParameterCount() &&
+							!Arrays.equals(paramTypes, factoryMethodToUse.getParameterTypes())) {
+						if (ambiguousFactoryMethods == null) {
+							ambiguousFactoryMethods = new LinkedHashSet<>();
+							ambiguousFactoryMethods.add(factoryMethodToUse);
+						}
+						ambiguousFactoryMethods.add(candidate);
+					}
+				}
+			}
+
+			if (factoryMethodToUse == null || argsToUse == null) {
+				if (causes != null) {
+					UnsatisfiedDependencyException ex = causes.removeLast();
+					for (Exception cause : causes) {
+						this.beanFactory.onSuppressedException(cause);
+					}
+					throw ex;
+				}
+				List<String> argTypes = new ArrayList<>(minNrOfArgs);
+				if (explicitArgs != null) {
+					for (Object arg : explicitArgs) {
+						argTypes.add(arg != null ? arg.getClass().getSimpleName() : "null");
+					}
+				}
+				else if (resolvedValues != null) {
+					Set<ValueHolder> valueHolders = new LinkedHashSet<>(resolvedValues.getArgumentCount());
+					valueHolders.addAll(resolvedValues.getIndexedArgumentValues().values());
+					valueHolders.addAll(resolvedValues.getGenericArgumentValues());
+					for (ValueHolder value : valueHolders) {
+						String argType = (value.getType() != null ? ClassUtils.getShortName(value.getType()) :
+								(value.getValue() != null ? value.getValue().getClass().getSimpleName() : "null"));
+						argTypes.add(argType);
+					}
+				}
+				String argDesc = StringUtils.collectionToCommaDelimitedString(argTypes);
+				throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+						"No matching factory method found on class [" + factoryClass.getName() + "]: " +
+						(mbd.getFactoryBeanName() != null ?
+							"factory bean '" + mbd.getFactoryBeanName() + "'; " : "") +
+						"factory method '" + mbd.getFactoryMethodName() + "(" + argDesc + ")'. " +
+						"Check that a method with the specified name " +
+						(minNrOfArgs > 0 ? "and arguments " : "") +
+						"exists and that it is " +
+						(isStatic ? "static" : "non-static") + ".");
+			}
+			else if (void.class == factoryMethodToUse.getReturnType()) {
+				throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+						"Invalid factory method '" + mbd.getFactoryMethodName() + "' on class [" +
+						factoryClass.getName() + "]: needs to have a non-void return type!");
+			}
+			else if (ambiguousFactoryMethods != null) {
+				throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+						"Ambiguous factory method matches found on class [" + factoryClass.getName() + "] " +
+						"(hint: specify index/type/name arguments for simple parameters to avoid type ambiguities): " +
+						ambiguousFactoryMethods);
+			}
+
+			if (explicitArgs == null && argsHolderToUse != null) {
+				mbd.factoryMethodToIntrospect = factoryMethodToUse;
+				argsHolderToUse.storeCache(mbd, factoryMethodToUse);
+			}
+		}
+
+		bw.setBeanInstance(instantiate(beanName, mbd, factoryBean, factoryMethodToUse, argsToUse));
+		return bw;
+	}	
+```
+##### autowireConstructor
+```
+	protected BeanWrapper autowireConstructor(
+			String beanName, RootBeanDefinition mbd, @Nullable Constructor<?>[] ctors, @Nullable Object[] explicitArgs) {
+
+		return new ConstructorResolver(this).autowireConstructor(beanName, mbd, ctors, explicitArgs);
+	}
+	//ConstructorResolver.autowireConstructor
+	public BeanWrapper autowireConstructor(String beanName, RootBeanDefinition mbd,
+			@Nullable Constructor<?>[] chosenCtors, @Nullable Object[] explicitArgs) {
+
+		BeanWrapperImpl bw = new BeanWrapperImpl();
+		this.beanFactory.initBeanWrapper(bw);
+
+		Constructor<?> constructorToUse = null;
+		ArgumentsHolder argsHolderToUse = null;
+		Object[] argsToUse = null;
+
+		if (explicitArgs != null) {
+			argsToUse = explicitArgs;
+		}
+		else {
+			Object[] argsToResolve = null;
+			synchronized (mbd.constructorArgumentLock) {
+				constructorToUse = (Constructor<?>) mbd.resolvedConstructorOrFactoryMethod;
+				if (constructorToUse != null && mbd.constructorArgumentsResolved) {
+					// Found a cached constructor...
+					argsToUse = mbd.resolvedConstructorArguments;
+					if (argsToUse == null) {
+						argsToResolve = mbd.preparedConstructorArguments;
+					}
+				}
+			}
+			if (argsToResolve != null) {
+				argsToUse = resolvePreparedArguments(beanName, mbd, bw, constructorToUse, argsToResolve);
+			}
+		}
+
+		if (constructorToUse == null || argsToUse == null) {
+			// Take specified constructors, if any.
+			Constructor<?>[] candidates = chosenCtors;
+			if (candidates == null) {
+				Class<?> beanClass = mbd.getBeanClass();
+				try {
+					candidates = (mbd.isNonPublicAccessAllowed() ?
+							beanClass.getDeclaredConstructors() : beanClass.getConstructors());
+				}
+				catch (Throwable ex) {
+					throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+							"Resolution of declared constructors on bean Class [" + beanClass.getName() +
+							"] from ClassLoader [" + beanClass.getClassLoader() + "] failed", ex);
+				}
+			}
+
+			if (candidates.length == 1 && explicitArgs == null && !mbd.hasConstructorArgumentValues()) {
+				Constructor<?> uniqueCandidate = candidates[0];
+				if (uniqueCandidate.getParameterCount() == 0) {
+					synchronized (mbd.constructorArgumentLock) {
+						mbd.resolvedConstructorOrFactoryMethod = uniqueCandidate;
+						mbd.constructorArgumentsResolved = true;
+						mbd.resolvedConstructorArguments = EMPTY_ARGS;
+					}
+					bw.setBeanInstance(instantiate(beanName, mbd, uniqueCandidate, EMPTY_ARGS));
+					return bw;
+				}
+			}
+
+			// Need to resolve the constructor.
+			boolean autowiring = (chosenCtors != null ||
+					mbd.getResolvedAutowireMode() == AutowireCapableBeanFactory.AUTOWIRE_CONSTRUCTOR);
+			ConstructorArgumentValues resolvedValues = null;
+
+			int minNrOfArgs;
+			if (explicitArgs != null) {
+				minNrOfArgs = explicitArgs.length;
+			}
+			else {
+				ConstructorArgumentValues cargs = mbd.getConstructorArgumentValues();
+				resolvedValues = new ConstructorArgumentValues();
+				minNrOfArgs = resolveConstructorArguments(beanName, mbd, bw, cargs, resolvedValues);
+			}
+
+			AutowireUtils.sortConstructors(candidates);
+			int minTypeDiffWeight = Integer.MAX_VALUE;
+			Set<Constructor<?>> ambiguousConstructors = null;
+			Deque<UnsatisfiedDependencyException> causes = null;
+
+			for (Constructor<?> candidate : candidates) {
+				int parameterCount = candidate.getParameterCount();
+
+				if (constructorToUse != null && argsToUse != null && argsToUse.length > parameterCount) {
+					// Already found greedy constructor that can be satisfied ->
+					// do not look any further, there are only less greedy constructors left.
+					break;
+				}
+				if (parameterCount < minNrOfArgs) {
+					continue;
+				}
+
+				ArgumentsHolder argsHolder;
+				Class<?>[] paramTypes = candidate.getParameterTypes();
+				if (resolvedValues != null) {
+					try {
+						String[] paramNames = ConstructorPropertiesChecker.evaluate(candidate, parameterCount);
+						if (paramNames == null) {
+							ParameterNameDiscoverer pnd = this.beanFactory.getParameterNameDiscoverer();
+							if (pnd != null) {
+								paramNames = pnd.getParameterNames(candidate);
+							}
+						}
+						argsHolder = createArgumentArray(beanName, mbd, resolvedValues, bw, paramTypes, paramNames,
+								getUserDeclaredConstructor(candidate), autowiring, candidates.length == 1);
+					}
+					catch (UnsatisfiedDependencyException ex) {
+						if (logger.isTraceEnabled()) {
+							logger.trace("Ignoring constructor [" + candidate + "] of bean '" + beanName + "': " + ex);
+						}
+						// Swallow and try next constructor.
+						if (causes == null) {
+							causes = new ArrayDeque<>(1);
+						}
+						causes.add(ex);
+						continue;
+					}
+				}
+				else {
+					// Explicit arguments given -> arguments length must match exactly.
+					if (parameterCount != explicitArgs.length) {
+						continue;
+					}
+					argsHolder = new ArgumentsHolder(explicitArgs);
+				}
+
+				int typeDiffWeight = (mbd.isLenientConstructorResolution() ?
+						argsHolder.getTypeDifferenceWeight(paramTypes) : argsHolder.getAssignabilityWeight(paramTypes));
+				// Choose this constructor if it represents the closest match.
+				if (typeDiffWeight < minTypeDiffWeight) {
+					constructorToUse = candidate;
+					argsHolderToUse = argsHolder;
+					argsToUse = argsHolder.arguments;
+					minTypeDiffWeight = typeDiffWeight;
+					ambiguousConstructors = null;
+				}
+				else if (constructorToUse != null && typeDiffWeight == minTypeDiffWeight) {
+					if (ambiguousConstructors == null) {
+						ambiguousConstructors = new LinkedHashSet<>();
+						ambiguousConstructors.add(constructorToUse);
+					}
+					ambiguousConstructors.add(candidate);
+				}
+			}
+
+			if (constructorToUse == null) {
+				if (causes != null) {
+					UnsatisfiedDependencyException ex = causes.removeLast();
+					for (Exception cause : causes) {
+						this.beanFactory.onSuppressedException(cause);
+					}
+					throw ex;
+				}
+				throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+						"Could not resolve matching constructor on bean class [" + mbd.getBeanClassName() + "] " +
+						"(hint: specify index/type/name arguments for simple parameters to avoid type ambiguities)");
+			}
+			else if (ambiguousConstructors != null && !mbd.isLenientConstructorResolution()) {
+				throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+						"Ambiguous constructor matches found on bean class [" + mbd.getBeanClassName() + "] " +
+						"(hint: specify index/type/name arguments for simple parameters to avoid type ambiguities): " +
+						ambiguousConstructors);
+			}
+
+			if (explicitArgs == null && argsHolderToUse != null) {
+				argsHolderToUse.storeCache(mbd, constructorToUse);
+			}
+		}
+
+		Assert.state(argsToUse != null, "Unresolved constructor arguments");
+		bw.setBeanInstance(instantiate(beanName, mbd, constructorToUse, argsToUse));
+		return bw;
+	}	
 ```
