--- a/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
+++ b/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
@@ -777,6 +777,8 @@
 			Set<Method> ambiguousFactoryMethods = null;
 
 			int minNrOfArgs;
+			//如果explicitArgs不为空则用explicitArgs的长度作为最少参数个数
+			//如果explicitArgs为空，那么需要根据BeanDefinition的定义来获取最少参数个数
 			if (explicitArgs != null) {
 				minNrOfArgs = explicitArgs.length;
 			}
@@ -794,7 +796,7 @@
 			}
 
 			Deque<UnsatisfiedDependencyException> causes = null;
-
+			//遍历所有方法，如果方法的参数个数大于最少参数个数，就跳过，只处理参数个数多于最少参数个数的方法
 			for (Method candidate : candidates) {
 				int parameterCount = candidate.getParameterCount();
 
@@ -802,6 +804,7 @@
 					ArgumentsHolder argsHolder;
 
 					Class<?>[] paramTypes = candidate.getParameterTypes();
+					//如果explicitArgs不为空，那么参数个数要和explicitArgs的个数严格一致
 					if (explicitArgs != null) {
 						// Explicit arguments given -> arguments length must match exactly.
 						if (paramTypes.length != explicitArgs.length) {
@@ -809,6 +812,7 @@
 						}
 						argsHolder = new ArgumentsHolder(explicitArgs);
 					}
+					//如果explicitArgs为空
 					else {
 						// Resolved constructor arguments: type conversion and/or autowiring necessary.
 						try {
@@ -817,6 +821,7 @@
 							if (pnd != null) {
 								paramNames = pnd.getParameterNames(candidate);
 							}
+							//将参数进行转换，argsHolder保存转换前结果在rawArguments数组，转换后结果存在arguments数组，为下面计算工厂方法匹配值使用
 							argsHolder = createArgumentArray(beanName, mbd, resolvedValues, bw,
 									paramTypes, paramNames, candidate, autowiring, candidates.size() == 1);
 						}
@@ -832,10 +837,13 @@
 							continue;
 						}
 					}
-
+					//判断是宽松模式还是严格模式解析参数，如果explicitArgs不为空，那么入参和转换后的入参是相同的，但是从上可知explicitArgs为空，入参经过转换，也就是经过createArgumentArray方法。
+					//严格模式首先会判断转换后的入参和参数类型是否匹配，如果有不匹配则返回则转换后的入参和参数类型的匹配结果为Integer.MAX_VALUE，如果都匹配则获取转换后的入参的父类，每有一级父类则结果加2，入参结果也是按照上边计算，但是计算完会将结果减去1024，最终比较两个结果获取最小值。
+					//宽松模式会先判断转换后的入参和参数类型是否匹配，或者转换后的入参是否基本类型，如果不匹配则返回Integer.MAX_VALUE，其次判断入参和参数类型是否匹配，如果不匹配返回Integer.MAX_VALUE-512,如果都匹配返回Integer.MAX_VALUE-1024，参数和参数类型不匹配，所以会返回Integer.MAX_VALUE-512.
 					int typeDiffWeight = (mbd.isLenientConstructorResolution() ?
 							argsHolder.getTypeDifferenceWeight(paramTypes) : argsHolder.getAssignabilityWeight(paramTypes));
 					// Choose this factory method if it represents the closest match.
+					//facoryMethod得分最小的结果越匹配，将匹配结果赋值。如果结果相同，则将方法添加到数组里
 					if (typeDiffWeight < minTypeDiffWeight) {
 						factoryMethodToUse = candidate;
 						argsHolderToUse = argsHolder;
@@ -860,7 +868,9 @@
 					}
 				}
 			}
-
+			//如果没有最匹配的factoryMethod，则报错，如果解析时有报错则先报解析的错误，否则报BeanCreationException异常
+			//如果只有一个最匹配的factoryMethod但是返回值是void，则报BeanCreationException异常，提示无效的factoryMethod
+			//如果有多个factoryMethod，则报BeanCreationException异常，提示找不到唯一的factoryMethod
 			if (factoryMethodToUse == null || argsToUse == null) {
 				if (causes != null) {
 					UnsatisfiedDependencyException ex = causes.removeLast();
@@ -913,12 +923,13 @@
 				argsHolderToUse.storeCache(mbd, factoryMethodToUse);
 			}
 		}
-
+		//调用instantiate方法构造bean实例
 		bw.setBeanInstance(instantiate(beanName, mbd, factoryBean, factoryMethodToUse, argsToUse));
 		return bw;
 	}	
 ```
 ##### autowireConstructor
+autowireConstructor的逻辑和instantiateUsingFactoryMethod相似，只不过处理的从factoryMethod到Constructor
 ```
 	protected BeanWrapper autowireConstructor(
 			String beanName, RootBeanDefinition mbd, @Nullable Constructor<?>[] ctors, @Nullable Object[] explicitArgs) {
@@ -1095,7 +1106,201 @@
 		}
 
 		Assert.state(argsToUse != null, "Unresolved constructor arguments");
+		//调用instantiate方法构造bean实例
 		bw.setBeanInstance(instantiate(beanName, mbd, constructorToUse, argsToUse));
 		return bw;
 	}	
+```
+##### instantiate
+instantiate有三个同名方法，一个非factoryMethod和构造函数使用的，一个是factoryMethod使用的，一个是构造函数使用的。
+非factoryMethod和构造函数使用的方法。
+```
+	public Object instantiate(RootBeanDefinition bd, @Nullable String beanName, BeanFactory owner) {
+		// Don't override the class with CGLIB if no overrides.
+		if (!bd.hasMethodOverrides()) {
+			Constructor<?> constructorToUse;
+			synchronized (bd.constructorArgumentLock) {
+				constructorToUse = (Constructor<?>) bd.resolvedConstructorOrFactoryMethod;
+				if (constructorToUse == null) {
+					final Class<?> clazz = bd.getBeanClass();
+					if (clazz.isInterface()) {
+						throw new BeanInstantiationException(clazz, "Specified class is an interface");
+					}
+					try {
+						if (System.getSecurityManager() != null) {
+							constructorToUse = AccessController.doPrivileged(
+									(PrivilegedExceptionAction<Constructor<?>>) clazz::getDeclaredConstructor);
+						}
+						else {
+							//获取bean的无参构造函数
+							constructorToUse = clazz.getDeclaredConstructor();
+						}
+						bd.resolvedConstructorOrFactoryMethod = constructorToUse;
+					}
+					catch (Throwable ex) {
+						throw new BeanInstantiationException(clazz, "No default constructor found", ex);
+					}
+				}
+			}
+			//通过无参构造函数实例化bean对象
+			return BeanUtils.instantiateClass(constructorToUse);
+		}
+		else {
+			// Must generate CGLIB subclass.
+			return instantiateWithMethodInjection(bd, beanName, owner);
+		}
+	}
+```
+factoryMethod实例化bean。
+```
+	public Object instantiate(RootBeanDefinition bd, @Nullable String beanName, BeanFactory owner,
+			@Nullable Object factoryBean, final Method factoryMethod, Object... args) {
+
+		try {
+			if (System.getSecurityManager() != null) {
+				AccessController.doPrivileged((PrivilegedAction<Object>) () -> {
+					ReflectionUtils.makeAccessible(factoryMethod);
+					return null;
+				});
+			}
+			else {
+				ReflectionUtils.makeAccessible(factoryMethod);
+			}
+
+			Method priorInvokedFactoryMethod = currentlyInvokedFactoryMethod.get();
+			try {
+				//这一步会通过反射执行factoryMethod实例化bean
+				currentlyInvokedFactoryMethod.set(factoryMethod);
+				Object result = factoryMethod.invoke(factoryBean, args);
+				if (result == null) {
+					result = new NullBean();
+				}
+				return result;
+			}
+			finally {
+				if (priorInvokedFactoryMethod != null) {
+					currentlyInvokedFactoryMethod.set(priorInvokedFactoryMethod);
+				}
+				else {
+					currentlyInvokedFactoryMethod.remove();
+				}
+			}
+		}
+		catch (IllegalArgumentException ex) {
+			throw new BeanInstantiationException(factoryMethod,
+					"Illegal arguments to factory method '" + factoryMethod.getName() + "'; " +
+					"args: " + StringUtils.arrayToCommaDelimitedString(args), ex);
+		}
+		catch (IllegalAccessException ex) {
+			throw new BeanInstantiationException(factoryMethod,
+					"Cannot access factory method '" + factoryMethod.getName() + "'; is it public?", ex);
+		}
+		catch (InvocationTargetException ex) {
+			String msg = "Factory method '" + factoryMethod.getName() + "' threw exception";
+			if (bd.getFactoryBeanName() != null && owner instanceof ConfigurableBeanFactory &&
+					((ConfigurableBeanFactory) owner).isCurrentlyInCreation(bd.getFactoryBeanName())) {
+				msg = "Circular reference involving containing bean '" + bd.getFactoryBeanName() + "' - consider " +
+						"declaring the factory method as static for independence from its containing instance. " + msg;
+			}
+			throw new BeanInstantiationException(factoryMethod, msg, ex.getTargetException());
+		}
+	}
+```
+使用构造函数实例化bean。
+```
+	private Object instantiate(
+			String beanName, RootBeanDefinition mbd, Constructor<?> constructorToUse, Object[] argsToUse) {
+
+		try {
+			InstantiationStrategy strategy = this.beanFactory.getInstantiationStrategy();
+			if (System.getSecurityManager() != null) {
+				return AccessController.doPrivileged((PrivilegedAction<Object>) () ->
+						strategy.instantiate(mbd, beanName, this.beanFactory, constructorToUse, argsToUse),
+						this.beanFactory.getAccessControlContext());
+			}
+			else {
+				//这一步会调用Constructor.newInstance实例化bean
+				return strategy.instantiate(mbd, beanName, this.beanFactory, constructorToUse, argsToUse);
+			}
+		}
+		catch (Throwable ex) {
+			throw new BeanCreationException(mbd.getResourceDescription(), beanName,
+					"Bean instantiation via constructor failed", ex);
+		}
+	}
+```
+bean实例化完成之后会对bean进行处理，调用```populateBean```方法对bean进行填充，调用```initializeBean```对bean进行初始化。
+```
+	protected void populateBean(String beanName, RootBeanDefinition mbd, @Nullable BeanWrapper bw) {
+		if (bw == null) {
+			if (mbd.hasPropertyValues()) {
+				throw new BeanCreationException(
+						mbd.getResourceDescription(), beanName, "Cannot apply property values to null instance");
+			}
+			else {
+				// Skip property population phase for null instance.
+				return;
+			}
+		}
+
+		// Give any InstantiationAwareBeanPostProcessors the opportunity to modify the
+		// state of the bean before properties are set. This can be used, for example,
+		// to support styles of field injection.
+		if (!mbd.isSynthetic() && hasInstantiationAwareBeanPostProcessors()) {
+			for (InstantiationAwareBeanPostProcessor bp : getBeanPostProcessorCache().instantiationAware) {
+				if (!bp.postProcessAfterInstantiation(bw.getWrappedInstance(), beanName)) {
+					return;
+				}
+			}
+		}
+
+		PropertyValues pvs = (mbd.hasPropertyValues() ? mbd.getPropertyValues() : null);
+
+		int resolvedAutowireMode = mbd.getResolvedAutowireMode();
+		if (resolvedAutowireMode == AUTOWIRE_BY_NAME || resolvedAutowireMode == AUTOWIRE_BY_TYPE) {
+			MutablePropertyValues newPvs = new MutablePropertyValues(pvs);
+			// Add property values based on autowire by name if applicable.
+			if (resolvedAutowireMode == AUTOWIRE_BY_NAME) {
+				autowireByName(beanName, mbd, bw, newPvs);
+			}
+			// Add property values based on autowire by type if applicable.
+			if (resolvedAutowireMode == AUTOWIRE_BY_TYPE) {
+				autowireByType(beanName, mbd, bw, newPvs);
+			}
+			pvs = newPvs;
+		}
+
+		boolean hasInstAwareBpps = hasInstantiationAwareBeanPostProcessors();
+		boolean needsDepCheck = (mbd.getDependencyCheck() != AbstractBeanDefinition.DEPENDENCY_CHECK_NONE);
+
+		PropertyDescriptor[] filteredPds = null;
+		if (hasInstAwareBpps) {
+			if (pvs == null) {
+				pvs = mbd.getPropertyValues();
+			}
+			for (InstantiationAwareBeanPostProcessor bp : getBeanPostProcessorCache().instantiationAware) {
+				PropertyValues pvsToUse = bp.postProcessProperties(pvs, bw.getWrappedInstance(), beanName);
+				if (pvsToUse == null) {
+					if (filteredPds == null) {
+						filteredPds = filterPropertyDescriptorsForDependencyCheck(bw, mbd.allowCaching);
+					}
+					pvsToUse = bp.postProcessPropertyValues(pvs, filteredPds, bw.getWrappedInstance(), beanName);
+					if (pvsToUse == null) {
+						return;
+					}
+				}
+				pvs = pvsToUse;
+			}
+		}
+		if (needsDepCheck) {
+			if (filteredPds == null) {
+				filteredPds = filterPropertyDescriptorsForDependencyCheck(bw, mbd.allowCaching);
+			}
+			checkDependencies(beanName, mbd, filteredPds, pvs);
+		}
+
+		if (pvs != null) {
+			applyPropertyValues(beanName, mbd, bw, pvs);
+		}
+	}
 ```
