--- a/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
+++ b/spring/1-容器启动/1.11-初始化bean-finishBeanFactoryInitialization.md
@@ -1246,6 +1246,7 @@ bean实例化完成之后会对bean进行处理，调用```populateBean```方法
 		// Give any InstantiationAwareBeanPostProcessors the opportunity to modify the
 		// state of the bean before properties are set. This can be used, for example,
 		// to support styles of field injection.
+		//给InstantiationAwareBeanPostProcessors的实现类一个修改bean的机会，直到有某个InstantiationAwareBeanPostProcessors的postProcessAfterInstantiation方法返回false
 		if (!mbd.isSynthetic() && hasInstantiationAwareBeanPostProcessors()) {
 			for (InstantiationAwareBeanPostProcessor bp : getBeanPostProcessorCache().instantiationAware) {
 				if (!bp.postProcessAfterInstantiation(bw.getWrappedInstance(), beanName)) {
@@ -1255,15 +1256,17 @@ bean实例化完成之后会对bean进行处理，调用```populateBean```方法
 		}
 
 		PropertyValues pvs = (mbd.hasPropertyValues() ? mbd.getPropertyValues() : null);
-
+		//根据bean的依赖方式完成注入，这里只对根据名称或者根据类型注入的进行处理
 		int resolvedAutowireMode = mbd.getResolvedAutowireMode();
 		if (resolvedAutowireMode == AUTOWIRE_BY_NAME || resolvedAutowireMode == AUTOWIRE_BY_TYPE) {
 			MutablePropertyValues newPvs = new MutablePropertyValues(pvs);
 			// Add property values based on autowire by name if applicable.
+			//根据名称进行注入
 			if (resolvedAutowireMode == AUTOWIRE_BY_NAME) {
 				autowireByName(beanName, mbd, bw, newPvs);
 			}
 			// Add property values based on autowire by type if applicable.
+			//根据类型进行注入
 			if (resolvedAutowireMode == AUTOWIRE_BY_TYPE) {
 				autowireByType(beanName, mbd, bw, newPvs);
 			}
@@ -1274,6 +1277,7 @@ bean实例化完成之后会对bean进行处理，调用```populateBean```方法
 		boolean needsDepCheck = (mbd.getDependencyCheck() != AbstractBeanDefinition.DEPENDENCY_CHECK_NONE);
 
 		PropertyDescriptor[] filteredPds = null;
+		//首先执行所有InstantiationAwareBeanPostProcessor实现类的postProcessProperties方法，获取到的结果执行如果为空且filteredPds也为空，那么就执行filterPropertyDescriptorsForDependencyCheck方法，过滤出所有需要进行依赖检查的项并将结果赋值给filteredPds，然后执行InstantiationAwareBeanPostProcessor的postProcessPropertyValues方法，将结果赋值给pvsToUse，如果结果为空则返回，不为空则赋值给pvs
 		if (hasInstAwareBpps) {
 			if (pvs == null) {
 				pvs = mbd.getPropertyValues();
@@ -1296,11 +1300,81 @@ bean实例化完成之后会对bean进行处理，调用```populateBean```方法
 			if (filteredPds == null) {
 				filteredPds = filterPropertyDescriptorsForDependencyCheck(bw, mbd.allowCaching);
 			}
+			//检查是否满足依赖关系，所有的依赖项需要先进行初始化，否则抛UnsatisfiedDependencyException异常
 			checkDependencies(beanName, mbd, filteredPds, pvs);
 		}
 
+		//将pvs的所有实例填充到beanWapper对应的bean实例
 		if (pvs != null) {
 			applyPropertyValues(beanName, mbd, bw, pvs);
+		}
+	}
+```
+按照名称进行注入的逻辑如下：
+```
+	protected void autowireByName(
+			String beanName, AbstractBeanDefinition mbd, BeanWrapper bw, MutablePropertyValues pvs) {
+		//遍历beanWapper的所有PropertyDescriptor，判断PropertyDescriptor可写，既为set方法，PropertyValues包含该名称，且不是简单参数类型（既Enum，Date，Number等或者数组）
+		String[] propertyNames = unsatisfiedNonSimpleProperties(mbd, bw);
+		for (String propertyName : propertyNames) {
+			//根据得到的属性名称，判断是否包含该bean，如果包含则获取到bean并添加到pvs，然后注册依赖
+			if (containsBean(propertyName)) {
+				Object bean = getBean(propertyName);
+				pvs.add(propertyName, bean);
+				registerDependentBean(propertyName, beanName);
+				if (logger.isTraceEnabled()) {
+					logger.trace("Added autowiring by name from bean name '" + beanName +
+							"' via property '" + propertyName + "' to bean named '" + propertyName + "'");
+				}
+			}
+			else {
+				if (logger.isTraceEnabled()) {
+					logger.trace("Not autowiring property '" + propertyName + "' of bean '" + beanName +
+							"' by name: no matching bean found");
+				}
+			}
+		}
+	}
+```
+按照类型进行注入的逻辑如下：
+```
+	protected void autowireByType(
+			String beanName, AbstractBeanDefinition mbd, BeanWrapper bw, MutablePropertyValues pvs) {
+
+		TypeConverter converter = getCustomTypeConverter();
+		if (converter == null) {
+			converter = bw;
+		}
+
+		Set<String> autowiredBeanNames = new LinkedHashSet<>(4);
+		String[] propertyNames = unsatisfiedNonSimpleProperties(mbd, bw);
+		for (String propertyName : propertyNames) {
+			try {
+				PropertyDescriptor pd = bw.getPropertyDescriptor(propertyName);
+				// Don't try autowiring by type for type Object: never makes sense,
+				// even if it technically is a unsatisfied, non-simple property.
+				if (Object.class != pd.getPropertyType()) {
+					MethodParameter methodParam = BeanUtils.getWriteMethodParameter(pd);
+					// Do not allow eager init for type matching in case of a prioritized post-processor.
+					boolean eager = !(bw.getWrappedInstance() instanceof PriorityOrdered);
+					DependencyDescriptor desc = new AutowireByTypeDependencyDescriptor(methodParam, eager);
+					Object autowiredArgument = resolveDependency(desc, beanName, autowiredBeanNames, converter);
+					if (autowiredArgument != null) {
+						pvs.add(propertyName, autowiredArgument);
+					}
+					for (String autowiredBeanName : autowiredBeanNames) {
+						registerDependentBean(autowiredBeanName, beanName);
+						if (logger.isTraceEnabled()) {
+							logger.trace("Autowiring by type from bean name '" + beanName + "' via property '" +
+									propertyName + "' to bean named '" + autowiredBeanName + "'");
+						}
+					}
+					autowiredBeanNames.clear();
+				}
+			}
+			catch (BeansException ex) {
+				throw new UnsatisfiedDependencyException(mbd.getResourceDescription(), beanName, propertyName, ex);
+			}
 		}
 	}
 ```
